useCallback for onChange and onBlur, to prevent rerenders

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hook-form",
+  "name": "react-hook-form-maygo",
   "description": "Performant, flexible and extensible forms library for React Hooks",
   "version": "7.17.4",
   "main": "dist/index.cjs.js",
